# libhybris

compat/media/: Android.mk  camera_service.cpp  camera_service.rc
hybris/: configure.ac
hybris/common/: Makefile.am  hooks.c
hybris/common/r/: Makefile.am  dlfcn.cpp  hybris_compat.h  linker.cpp  linker_block_allocator.cpp  linker_cfi.cpp  linker_config.cpp  linker_debug.h  linker_debuggerd_android.cpp  linker_debuggerd_stub.cpp  linker_gdb_support.cpp  linker_globals.cpp  linker_globals.h  linker_logger.cpp  linker_logger.h  linker_main.cpp  linker_memory.cpp  linker_namespaces.cpp  linker_phdr.cpp  linker_relocate.cpp  linker_relocate.h  linker_soinfo.cpp  linker_soinfo.h  linker_tls.cpp  linker_translate_path.cpp  linker_utils.cpp  linker_utils.h
hybris/common/r/bionic/libc/: android-base.tar.bz2  async_safe-include.tar.bz2  platform.tar.bz2
hybris/common/r/bionic/libc/bionic/: bionic_call_ifunc_resolver.cpp  bionic_elf_tls.cpp  libc_init_common.h  pthread_internal.h
hybris/common/r/bionic/libc/include/: dlfcn.h  libc-include.tar.bz2  link.h  stdatomic.h
hybris/common/r/bionic/libc/include/android/: api-level.h
hybris/common/r/bionic/libc/private/: CFIShadow.h  ScopedSignalBlocker.h  WriteProtected.h  __get_tls.h  __get_tls_internal.h  bionic_auxv.h  bionic_elf_tls.h  bionic_futex.h  bionic_lock.h  bionic_systrace.h
